--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,17 @@
-APP_NAME=Laravel
+APP_NAME="سایت خبری"
+APP_ICON="news_site_icon.png"
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=news_site_created_with_laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -21,12 +22,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=5db6253802bb7d
+MAIL_PASSWORD=586933c026e705
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=afattahi1387@gmail.com
+MAIL_FROM_NAME="${APP_NAME}"
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
